--- a/.github/workflows/action2.yml
+++ b/.github/workflows/action2.yml
@@ -6,4 +6,5 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - run: proselint *.md 
+      - run: npm install write-good
+      - run: write-good *.md
