--- a/.github/workflows/action2.yml
+++ b/.github/workflows/action2.yml
@@ -6,5 +6,5 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - run: npm install proselint
+      - run: pip install proselint
       - run: proselint *.md
